--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "express": "^4.19.2",
+    "prisma": "^5.13.0",
     "sqlite3": "^5.1.7"
   },
   "description": ""
