Prepare test framework

--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "prisma": "^5.13.0",
     "sqlite3": "^5.1.7"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
+  }
 }
