--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "joi": "^17.13.1",
     "prisma": "^5.13.0",
