--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "joi": "^17.13.1",
     "prisma": "^5.13.0",
     "sqlite3": "^5.1.7"
