--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.13.0",
     "sqlite3": "^5.1.7"
   },
